# steering_school

./: .gitignore  CMakeLists.txt  Licence.txt  Makefile  Makefile.local  Makefile.local.in  Readme.dist  Readme.txt
CMake/: ConfigureCPack.cmake  FindMPIC.cmake  FindRealityGrid.cmake  TestC.cmake  test_dirent.cpp
examples/: config.h.in
examples/flag-sim/: CMakeLists.txt  flag-sim.c  flag.h
examples/flag-viz-files/: CMakeLists.txt  flag-viz.h
examples/mpi/: CMakeLists.txt
exercises/flag-sim/: Instructions.txt  Makefile  flag-sim.c  flag-utils.c
exercises/flag-sim/src/: flag_utils.c
exercises/flag-sim/src1/: flag.c
exercises/flag-sim/src2/: Makefile  flag_utils.c
exercises/flag-sim/src3/: Makefile  flag.h  flag_final_template.fld
exercises/flag-viz-reg/: Makefile  flag-viz.cpp
exercises/flag-viz-steered/: Instructions.txt  Makefile  flag-viz.cpp
exercises/flag/src/: Makefile  flag.c  flag_utils.c
exercises/flag/src1/: flag.c  flag_final_template.fld
exercises/flag/src2/: Makefile  flag.c
exercises/flag/src3/: Makefile  flag-steer-config  flag.c  flag.h  steerer-config
exercises/mpi/: Instructions.txt  Makefile  mpi_simulation.c  submit.pbs
flag-sim/: CMakeLists.txt  Makefile  flag-sim.c  flag-utils.c  flag.h  flag_utils.c
flag-viz-files/: CMakeLists.txt  Makefile  flag-viz-utils.cpp  flag-viz.cpp  flag-viz.h
flag-viz-reg/: Makefile  flag-viz.cpp
flag-viz-steered/: CMakeLists.txt  Makefile  flag-viz.cpp
mpi/: CMakeLists.txt  Makefile  mpi_simulation.c  mpi_simulation.h  submit.sh
